<resources>
    <string name="app_name">Tiện ích mua sắm</string>
    <string name="menu_dashboard">Trang chủ</string>
    <string name="menu_search">Tìm kiếm</string>
    <string name="menu_chat">Nhắn tin</string>
    <string name="menu_profile">Cá nhân</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="at">vào lúc</string>
    <string name="seen">Đã xem</string>
    <string name="sent">Đã gửi</string>
    <string name="seen_by">Đã xem</string>
    <string name="error_happened">Có lỗi xảy ra.Vui lòng thử lại</string>
    <string name="retry">Thử lại</string>
    <string name="type_your_message">Nhập nội dung</string>
    <string name="selled">Đã bán</string>
    <string name="free_to_return">Miễn phí trả hàng</string>
    <string name="auth_product">Chính hãng 100%</string>
    <string name="free_ship_title">Miễn phí vận chuyển</string>
    <string name="free_ship_content">Miễn phí vận chuyển khi các đơn hàng đặt trong nội thành Hà Nội</string>
    <string name="shipping_fee">Phí vận chuyển</string>
    <string name="similar_product">Sản phẩm tương tự</string>
    <string name="buy_now">Mua ngay</string>
    <string name="view_all">Xem tất cả</string>
    <string name="size_board">Bảng Quy Đổi Kích Cỡ</string>
    <string name="quantity">Số lượng</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="no_comment">Chưa có đánh giá</string>
    <string name="what_do_you_want_to_search">Bạn đang tìm kiếm gì?</string>
    <string name="stop_speak">Dừng</string>
    <string name="suggest">Gợi ý</string>
    <string name="search">Tìm kiếm</string>
    <string name="personal">Cá nhân</string>
    <string name="manage_order">Quản lý đơn hàng</string>
    <string name="product_buy">Sản phẩm đã mua</string>
    <string name="favourite_product">Sản phẩm yêu thích</string>
    <string name="hotline">HOT LINE (Miễn phí)</string>
    <string name="faq_title">Câu hỏi thường gặp</string>
    <string name="contact_title">Hỗ trợ</string>
    <string name="login_logout">Đăng Nhập/ Đăng Ký</string>
    <string name="login_title">Đăng nhập</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>

    <string name="slide_1_title">Exclusive Products</string>
    <string name="slide_1_desc">Get products which are unique and only available at our shops !</string>

    <string name="slide_2_title">Cheap Rates</string>
    <string name="slide_2_desc">Products at such an affordable rates !</string>

    <string name="slide_3_title">Online Payments</string>
    <string name="slide_3_desc">With various pay options , you can easily pay in a minute !</string>

    <string name="slide_4_title">Fast Delivery</string>
    <string name="slide_4_desc">Blazing fast order delivery within time !</string>
    <string name="start">START</string>

    <integer name="activity_anim_duration">300</integer>
</resources>
