<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/margin_40dp"
        android:layout_height="@dimen/margin_40dp"
        android:padding="@dimen/margin_10dp"
        android:src="@drawable/ic_close_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:spanCount="3" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/rcv_color" />

    <TextView
        android:id="@+id/tv_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:fontFamily="@font/lato_regular"
        android:text="Size"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tv_choose_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/size_board"
        android:textColor="#03A9F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcV_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tv_size"
        app:spanCount="3"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:id="@+id/tv_quantity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/quantity"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rcV_size" />

    <include
        layout="@layout/layout_change_quantity"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_margin="@dimen/margin_10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_quantity_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_quantity_title" />

    <TextView
        android:id="@+id/btn_add_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:padding="@dimen/margin_8dp"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_quantity_title" />
</androidx.constraintlayout.widget.ConstraintLayout>

