<?xml version="1.0" encoding="utf-8"?>
<layout>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/colorPrimary"
        android:id="@+id/ll_chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:padding="@dimen/margin_8dp"
                android:src="@drawable/ic_back"
                android:tint="@color/white" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_friend_avatar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="@dimen/edit_text_padding"
                android:src="@drawable/img_no_image" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_friend_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/philosopher_bold"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size20"
                    android:text="@string/app_name" />

                <ImageView
                    android:id="@+id/img_friend_online_state"
                    android:layout_width="@dimen/edit_text_padding"
                    android:layout_height="@dimen/edit_text_padding"
                    android:layout_below="@id/txt_friend_name"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="@dimen/small_padding"
                    android:src="@drawable/dot_drawable" />

                <TextView
                    android:id="@+id/txt_friend_online_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_friend_name"
                    android:layout_toEndOf="@id/img_friend_online_state"
                    android:layout_toRightOf="@id/img_friend_online_state"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size10"
                    android:fontFamily="@font/philosopher_regular"
                    android:text="online" />
            </RelativeLayout>
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_messages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/rl_input"
            android:layout_below="@id/toolbar"
            android:background="@color/gray" />

        <ProgressBar
            android:id="@+id/progress_first_loading_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ln_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_happened"
                android:textSize="@dimen/text_size20" />

            <Button
                android:id="@+id/btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawableStart="@drawable/ic_retry"
                android:text="@string/retry"
                android:textColor="@android:color/tab_indicator_text" />
        </LinearLayout>

        <RelativeLayout
            android:background="@color/white"
            android:id="@+id/rl_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:elevation="4dp"
            android:paddingLeft="@dimen/edit_text_padding"
            android:paddingTop="@dimen/small_padding"
            android:paddingRight="@dimen/edit_text_padding"
            android:paddingBottom="@dimen/small_padding"
            android:translationZ="4dp">

            <ImageButton
                android:id="@+id/btn_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/edit_text_padding"
                android:layout_marginRight="@dimen/edit_text_padding"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_camera"
                android:tint="@color/colorPrimary" />

            <ImageButton
                android:id="@+id/btn_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/edit_text_padding"
                android:layout_marginRight="@dimen/edit_text_padding"
                android:layout_toEndOf="@id/btn_camera"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:visibility="gone"/>

            <com.beetech.tienichmuasam.custom.ClearableEditText
                android:id="@+id/edt_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/edit_text_padding"
                android:layout_toStartOf="@id/btn_send"
                android:layout_toEndOf="@id/btn_emoji"
                android:hint="@string/type_your_message"
                android:textSize="@dimen/text_size16"
                app:clearButtonDrawable="@drawable/ic_close_round"
                app:edtBackground="@drawable/message_edit_text_background" />

            <ImageButton
                android:tint="@color/colorPrimary"
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleX="1.1"
                android:scaleY="1.1"
                android:src="@drawable/ic_send" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>

</layout>
